Fixed some layout issues, added a responsive grid layout for the videos

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,18 @@
 body{
   background-color: #181818;
 }
+.video-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(420px,1fr));
+  gap:15px;
+}
+.video-container{
+  display: flex;
+  justify-content: center;
+}
 .video-preview{
   margin:20px;
   padding:10px;
-  width: 420px; /*for now fixed width*/
   display: flex;
   flex-direction: column;
   border-radius: 12px;
@@ -30,7 +38,7 @@ body{
   align-items: center;
 }
 #thumbnail-image{
-  width: 400px;
+  width: 100%;
   object-fit: cover;
   border-radius: 12px;
 }
@@ -56,6 +64,7 @@ body{
   display: flex;
   flex-direction: column;
   row-gap: 5px;
+  min-width: 0;
 }
 /* .detail-section-title{
      might need later for the menu button
